--- a/css/version2.css
+++ b/css/version2.css
@@ -27,52 +27,36 @@ nav ul li {
 
 #cougar {
     background: #B26219;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: center;
 }
 
 #lion {
     background: #FFD5AE;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: center;
 }
 
 #tiger {
     background: #FFBD82;
+}
+
+article {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: center;
+    padding: 1rem;
 }
 
 section {
-    max-width: 550px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
+    width: 50%;
     align-items: center;
 }
 
 .text {
-    max-width: 500px;
-    background: #fff;
-    color: #000;
-    padding: 25px;
+    padding: 28px;
     font-size: 1rem;
     line-height: 1.2rem;
     margin: 0;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 }
 
 h2 {
-    text-align: center;
+  padding-bottom: 3rem;
 }
 
 footer {
@@ -86,7 +70,7 @@ footer {
 body {
     font-family: sans-serif;
     color: #000;
-    background: #000;
+    background: #fff;
 }
 img {
     max-width: 100%; /* DO NOT delete or change this line */
